--- a/cuestionario_R1.html
+++ b/cuestionario_R1.html
@@ -34,6 +34,7 @@
             <div class="timer">
                 <div class="time_text">Tiempo Restante</div>
                 <div class="timer_sec">20</div>
+                <div class="time_line"></div>
             </div>
         </header>
         <section>
@@ -62,7 +63,7 @@
             <div class="total_que">
                 <!-- <span><p>2</p><p>de</p><p>10</p>puntos</span> -->
             </div>
-            <button class="next_btn">Siguiente Pregunta</button>
+            <button class="next_btn">Siguiente</button>
         </footer>
     </div>
 
@@ -75,7 +76,6 @@
             <span>Lo siento, solo obtuviste <p>2</p> de <p>5</p></span>
         </div>
         <div class="buttons">
-            <button class="restart">Reiniciar Cuestionario</button>
             <button class="quit">Salir</button>
         </div>
     </div>
