--- a/public/listaEscAl.html
+++ b/public/listaEscAl.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lista</title>
 </head>
 <body>
-    <a href="crearEscenario.html">a</a>
-    <a href="/getEscenarioListAl">Escenarios</a>
-    <a href="/getEscenarioListPr">EscenariosP</a>
+    <table>
+        
+    </table>
 </body>
 </html>
