--- a/public/crearEscenario.html
+++ b/public/crearEscenario.html
@@ -11,7 +11,7 @@
   <div class="interact-container">
     <div class="left-side">
       <form>
-        <input name="texto" type="text" id="textoFig" class="texto" placeholder="Ingrese el texto">
+        <input name="texto" type="text" id="textoFig" class="texto" placeholder="Ingrese el texto" required pattern="^(?:3[01]|[12][0-9]|0?[1-9])([\-/.])(0?[1-9]|1[1-2])\1\d{4}$" maxlength="30">
         <select name="tipo" id="forma">
           <option value="proceso">proceso</option>
           <option value="limites">limites</option>
@@ -28,8 +28,8 @@
         <button type="button" class="boton" onclick="addArrow()">Flecha</button>
       </form>
       <form action="/addEscenario" method="post">
-        <input name="nombre" id="nombre">
-        <input name="descripcion" id="descripcion">
+        <input name="nombre" id="nombre" required pattern="^(?:3[01]|[12][0-9]|0?[1-9])([\-/.])(0?[1-9]|1[1-2])\1\d{4}$" maxlength="30">
+        <input name="descripcion" id="descripcion" required pattern="^(?:3[01]|[12][0-9]|0?[1-9])([\-/.])(0?[1-9]|1[1-2])\1\d{4}$" maxlength="100">
         <input type="text" id="desde" name="desde" style="display: none;">
         <input type="text" id="hacia" name="hacia" style="display: none;">
         <input type="text" id="tipoF" name="tipoF" style="display: none;">
