--- a/public/crearEscenario.html
+++ b/public/crearEscenario.html
@@ -39,7 +39,7 @@
         <input type="text" id="posx" name="posx" style="display: none;">
         <input type="text" id="posy" name="posy" style="display: none;">
         <input type="text" id="ids" name="ids" style="display: none;">
-        <button type="submit" onclick="prepararCamp()">Guardar</button>
+        <button type="submit" onclick="return prepararCamp()">Guardar</button>
       </form>
     </div>
     <canvas width="1200" height="800" id="lienzo"></canvas>
@@ -142,6 +142,32 @@
     }
 
     function prepararCamp(){
+      let nomb = document.getElementById('nombre').value;
+      let descr = document.getElementById('descripcion').value;
+      var patTxtFig = /^[0-9a-zA-Z ]/;
+
+      let verif = true;
+      for(var i=0;i<nomb.length;i++){
+        if(patTxtFig.test(nomb[i])){
+
+        }else{
+            verif = false;
+        }
+      }
+      for(var i=0;i<descr.length;i++){
+        if(patTxtFig.test(descr[i])){
+
+        }else{
+            verif = false;
+        }
+      }
+
+
+      if(verif){
+        
+      }else{
+        alert("Ingreso algun caracter invalido")
+      }
       document.getElementById('desde').value = '';
       document.getElementById('hacia').value = '';
       document.getElementById('txtFle').value = '';
@@ -170,18 +196,35 @@
       document.getElementById('desde').value = document.getElementById('desde').value.substring(0,document.getElementById('desde').value.length-1);
       document.getElementById('hacia').value = document.getElementById('hacia').value.substring(0,document.getElementById('hacia').value.length-1);
       document.getElementById('txtFle').value = document.getElementById('txtFle').value.substring(0,document.getElementById('txtFle').value.length-1);
+      return verif;
     }
 
     function addFig(){
       let forma = document.getElementById('forma').value;
       let txtFig = document.getElementById('textoFig').value;
-      objetos.push({
-        x:100,y:100,
-        height:80,
-        width:120,
-        tipo:forma,
-        texto:txtFig
-      })
+
+      var patTxtFig = /^[0-9a-zA-Z ]/;
+
+      let verif = true;
+      for(var i=0;i<txtFig.length;i++){
+        if(patTxtFig.test(txtFig[i])){
+
+        }else{
+            verif = false;
+        }
+      }
+
+      if(verif){
+        objetos.push({
+          x:100,y:100,
+          height:80,
+          width:120,
+          tipo:forma,
+          texto:txtFig
+        })
+      }else{
+        alert("Ingreso algun caracter invalido")
+      }
       actualizar();
     }
 
